--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
     <!-- /Style css -->
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="container">
+            <div class="row py-3">
+                <div class="col-6">LOGO</div>
+                <div class="col-6 row justify-content-end">
+                    <div class="col-1">link</div>
+                    <div class="col-1">link</div>
+                    <div class="col-1">link</div>
+                </div>
+            </div>
+        </div>
+    </header>
     <main></main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
