--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- /Style css -->
 </head>
 <body>
+    <!-- Header -->
     <header>
         <div class="container">
             <div class="row py-3">
@@ -25,7 +26,16 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <!-- /Header -->
+    <main>
+        <!-- Hero -->
+        <div id="hero" class="text-center py-5">
+            <img src="" alt="">
+            <h1>START BOOTSTRAP</h1>
+            <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
+        </div>
+        <!-- /Hero -->
+    </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
