--- a/index.html
+++ b/index.html
@@ -35,6 +35,25 @@
             <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
         </div>
         <!-- /Hero -->
+        <!-- Portfolio -->
+        <div id="portfolio" class="container py-5">
+            <h2>PORTFOLIO</h2>
+            <div class="row">
+                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                </div>
+                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                </div>
+                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                </div>
+                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                </div>
+                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                </div>
+                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                </div>
+            </div>
+        </div>
+        <!-- /Portfolio -->
     </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
