--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
         </div>
         <!-- /Hero -->
-        <!-- Portfolio -->
+        <!-- Portfolio section-->
         <div id="portfolio" class="container py-5">
             <h2>PORTFOLIO</h2>
             <div class="row">
@@ -53,7 +53,20 @@
                 </div>
             </div>
         </div>
-        <!-- /Portfolio -->
+        <!-- /Portfolio section-->
+        <!-- About section -->
+        <div id="about">
+            <div class="container">
+                <div class="row p-5">
+                    <div class="col-12 justify-content-center">
+                        <h2>ABOUT</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, consequuntur placeat vitae aperiam hic sit ipsam, quo, eaque eligendi quisquam perspiciatis dignissimos quaerat iure odio illo! Maxime officiis at iure!</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt dignissimos beatae id minus ex modi voluptate laboriosam non assumenda autem. Distinctio aut eum suscipit ratione pariatur excepturi amet ea nobis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /About section -->
     </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
