--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
             </div>
         </div>
         <!-- /About section -->
+        <!-- Contact me section -->
+        <div id="contact-me">
+            <div class="container">
+                <div class="row p-5">
+                    <div class="col-12 justify-content-center">
+                        <h2>CONTACT ME</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, consequuntur placeat vitae aperiam hic sit ipsam, quo, eaque eligendi quisquam perspiciatis dignissimos quaerat iure odio illo! Maxime officiis at iure!
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /Contact me section -->
     </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
