--- a/index.html
+++ b/index.html
@@ -80,7 +80,28 @@
         </div>
         <!-- /Contact me section -->
     </main>
-    <footer></footer>
+    <footer>
+        <!-- Pre footer -->
+        <div id="pre-footer">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-12 col-md-4 text-center">
+                        <h3>LOCATION</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="col-12 col-md-4 text-center">
+                        <h3>LOCATION</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="col-12 col-md-4 text-center">
+                        <h3>LOCATION</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /Pre footer -->
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
