Crea cartella css component

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <div class="row py-3">
-                <div class="col-6">LOGO</div>
+                <div class="col-6 logo"><a href="#">START BOOTSTRAP</a></div>
                 <div class="col-6 row justify-content-end">
                     <div class="col-1">link</div>
                     <div class="col-1">link</div>
@@ -38,7 +38,7 @@
         <!-- Portfolio section-->
         <div id="portfolio" class="container py-5">
             <h2>PORTFOLIO</h2>
-            <div class="row">
+            <div class="row gy-3">
                 <div class="debug-card col-12 col-sm-6 col-lg-4">
                 </div>
                 <div class="debug-card col-12 col-sm-6 col-lg-4">
