--- a/index.html
+++ b/index.html
@@ -15,16 +15,30 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="container">
-            <div class="row py-3">
-                <div class="col-6 logo"><a href="#">START BOOTSTRAP</a></div>
-                <div class="col-6 row justify-content-end">
-                    <div class="col-1">link</div>
-                    <div class="col-1">link</div>
-                    <div class="col-1">link</div>
-                </div>
+        <nav class="container navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </div>
+          </nav>
     </header>
     <!-- /Header -->
     <main>
