--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <header class="sticky-top">
         <nav class="container bg-transparent navbar navbar-dark navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">START BOOTSTRAP</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="ms-auto navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">Features</a>
+                    <a class="nav-link active" href="#">ABOUT</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">Pricing</a>
+                    <a class="nav-link active" href="#">CONTACT</a>
                   </li>
                 </ul>
               </div>
