--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- /Font awesome -->
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- /Bootstrap -->
@@ -40,10 +43,15 @@
     <!-- /Header -->
     <main>
         <!-- Hero -->
-        <div id="hero" class="text-center py-5">
-            <img src="" alt="">
-            <h1>START BOOTSTRAP</h1>
-            <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
+        <div id="hero" class="py-5">
+            <div class="container">
+                <div class="row justify-content-center text-center">
+                    <img class="mb-3" src="img/avatar.svg" alt="avatar">
+                    <h1>START BOOTSTRAP</h1>
+                    <div class="ms-star-icon mb-2"><i class="mx-2 fa-solid fa-star"></i></div>
+                    <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
+                </div>
+            </div>
         </div>
         <!-- /Hero -->
         <!-- Portfolio section-->
