Aggiunge sezione portfolio

--- a/index.html
+++ b/index.html
@@ -55,20 +55,29 @@
         </div>
         <!-- /Hero -->
         <!-- Portfolio section-->
-        <div id="portfolio" class="container py-5">
-            <h2>PORTFOLIO</h2>
+        <div id="portfolio" class="container text-center py-5">
+            <div class="row justify-content-center">
+                <h2>PORTFOLIO</h2>
+                <div class="ms-star-icon mb-2"><i class="mx-2 fa-solid fa-star"></i></div>
+            </div>
             <div class="row gy-3">
-                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                <div class="ms-card mb-2 ms-card-img col-12 col-sm-6 col-lg-4">
+                    <img src="img/cabin.png" alt="cabin">
                 </div>
-                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                <div class="ms-card mb-2 ms-card-img col-12 col-sm-6 col-lg-4">
+                    <img src="img/cake.png" alt="cake">
                 </div>
-                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                <div class="ms-card mb-2 ms-card-img col-12 col-sm-6 col-lg-4">
+                    <img src="img/circus.png" alt="circus">
                 </div>
-                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                <div class="ms-card mb-2 ms-card-img col-12 col-sm-6 col-lg-4">
+                    <img src="img/game.png" alt="game">
                 </div>
-                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                <div class="ms-card mb-2 ms-card-img col-12 col-sm-6 col-lg-4">
+                    <img src="img/safe.png" alt="safe">
                 </div>
-                <div class="debug-card col-12 col-sm-6 col-lg-4">
+                <div class="ms-card mb-2 ms-card-img col-12 col-sm-6 col-lg-4">
+                    <img src="img/submarine.png" alt="submarine">
                 </div>
             </div>
         </div>
