Aggiunge sezione about

--- a/index.html
+++ b/index.html
@@ -84,15 +84,23 @@
         <!-- /Portfolio section-->
         <!-- About section -->
         <div id="about">
-            <div class="container">
-                <div class="row p-5">
-                    <div class="col-12 justify-content-center">
+            <section class="container py-5">
+                <div class="row justify-content-center ms-px-7">
+                    <div class="row justify-content-center col-12 text-center">
                         <h2>ABOUT</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, consequuntur placeat vitae aperiam hic sit ipsam, quo, eaque eligendi quisquam perspiciatis dignissimos quaerat iure odio illo! Maxime officiis at iure!</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt dignissimos beatae id minus ex modi voluptate laboriosam non assumenda autem. Distinctio aut eum suscipit ratione pariatur excepturi amet ea nobis.</p>
+                        <div class="ms-star-icon mb-2"><i class="mx-2 fa-solid fa-star"></i></div>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <p>Freelancer is a free bootstrap theme created by Star Bootstrap. The download includes the complete source files including HCML, CSS, and JavaScript as well as optional LESS stylesheet for easy customization.</p>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <p>Wheteher you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is perfect starting point!</p>
                     </div>
                 </div>
-            </div>
+                <div class="text-center">
+                    <button type="button" class="btn btn-outline-secondary ms-btn-color ms-border-color"><i class="fa-solid fa-download"></i> Download</button>
+                </div>
+            </section>
         </div>
         <!-- /About section -->
         <!-- Contact me section -->
