--- a/index.html
+++ b/index.html
@@ -105,13 +105,21 @@
         <!-- /About section -->
         <!-- Contact me section -->
         <div id="contact-me">
-            <div class="container">
-                <div class="row p-5">
-                    <div class="col-12 justify-content-center">
-                        <h2>CONTACT ME</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, consequuntur placeat vitae aperiam hic sit ipsam, quo, eaque eligendi quisquam perspiciatis dignissimos quaerat iure odio illo! Maxime officiis at iure!
-                    </div>
+            <div class="container py-5 ms-px-7">
+                <div class="row justify-content-center text-center">
+                    <h2>CONTACT ME</h2>
+                    <div class="ms-star-icon mb-2"><i class="mx-2 fa-solid fa-star"></i></div>
                 </div>
+                <form action="">
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Email address</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword">Password</label>
+                    </div>
+                </form>
             </div>
         </div>
         <!-- /Contact me section -->
