--- a/index.html
+++ b/index.html
@@ -136,19 +136,24 @@
     <footer>
         <!-- Pre footer -->
         <div id="pre-footer">
-            <div class="container py-5">
+            <div class="container pt-5">
                 <div class="row">
-                    <div class="col-12 col-md-4 text-center">
+                    <div class="col-12 col-md-4 text-center pb-5">
                         <h3>LOCATION</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <p>2215 John Daniel Drive Clack, MO 54243</p>
                     </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <h3>LOCATION</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <div class="col-12 col-md-4 text-center pb-5">
+                        <h3>AROUND THE WEB</h3>
+                        <div class="row justify-content-center">
+                            <div class="ms-circle mx-1"><i class="fa-brands fa-facebook-f"></i></div>
+                            <div class="ms-circle mx-1"><i class="fa-brands fa-google-plus-g"></i></div>
+                            <div class="ms-circle mx-1"><i class="fa-brands fa-twitter"></i></div>
+                            <div class="ms-circle mx-1"><i class="fa-brands fa-linkedin-in"></i></div>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <h3>LOCATION</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <div class="col-12 col-md-4 text-center pb-5">
+                        <h3>ABOUT FREELANCER</h3>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <strong>Star Bootstrap</strong>.</p>
                     </div>
                 </div>
             </div>
