--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
                 </div>
                 <form action="">
                     <div class="form-floating mb-3">
-                        <input type="name" class="form-control" id="floatingInput" placeholder="Name">
+                        <input type="name" class="form-control ms-border-form" id="floatingInput" placeholder="Name">
                         <label for="floatingInput">Name</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingInput"  placeholder="name@example.com">
+                        <input type="email" class="form-control ms-border-form" id="floatingInput"  placeholder="name@example.com">
                         <label for="floatingInput">Email address</label>
                     </div>
                     <div class="form-floating">
-                        <input type="tel" class="form-control" id="floatingPassword" placeholder="Password">
+                        <input type="tel" class="form-control ms-border-form" id="floatingPassword" placeholder="Password">
                         <label for="floatingPassword">Phone Number</label>
                     </div>
                     <div class="form-floating mt-3">
-                        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
+                        <textarea class="form-control ms-border-form" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
                         <label for="floatingTextarea2">Message</label>
                     </div>
                     <button type="submit" class="btn btn-success mt-3">Send</button>                    
