--- a/index.html
+++ b/index.html
@@ -85,32 +85,34 @@
         <!-- About section -->
         <div id="about">
             <section class="container py-5">
-                <div class="row justify-content-center ms-px-7">
-                    <div class="row justify-content-center col-12 text-center">
+                <div class="row justify-content-center">
+                    <div class="row justify-content-center text-center">
                         <h2>ABOUT</h2>
                         <div class="ms-star-icon mb-2"><i class="mx-2 fa-solid fa-star"></i></div>
                     </div>
-                    <div class="col-12 col-sm-6">
-                        <p>Freelancer is a free bootstrap theme created by Star Bootstrap. The download includes the complete source files including HCML, CSS, and JavaScript as well as optional LESS stylesheet for easy customization.</p>
+                    <div class="row justify-content-center ms-px-7">
+                        <div class="col-12 col-sm-6">
+                            <p>Freelancer is a free bootstrap theme created by Star Bootstrap. The download includes the complete source files including HCML, CSS, and JavaScript as well as optional LESS stylesheet for easy customization.</p>
+                        </div>
+                        <div class="col-12 col-sm-6">
+                            <p>Wheteher you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is perfect starting point!</p>
+                        </div>
+                        <div class="text-center">
+                            <button type="button" class="btn btn-outline-secondary ms-btn-color ms-border-color"><i class="fa-solid fa-download"></i> Download</button>
+                        </div>
                     </div>
-                    <div class="col-12 col-sm-6">
-                        <p>Wheteher you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is perfect starting point!</p>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <button type="button" class="btn btn-outline-secondary ms-btn-color ms-border-color"><i class="fa-solid fa-download"></i> Download</button>
                 </div>
             </section>
         </div>
         <!-- /About section -->
         <!-- Contact me section -->
         <div id="contact-me">
-            <div class="container py-5 ms-px-7">
+            <div class="container py-5">
                 <div class="row justify-content-center text-center">
                     <h2>CONTACT ME</h2>
                     <div class="ms-star-icon mb-2"><i class="mx-2 fa-solid fa-star"></i></div>
                 </div>
-                <form action="">
+                <form class="ms-px-7" action="">
                     <div class="form-floating mb-3">
                         <input type="name" class="form-control ms-border-form" id="floatingInput" placeholder="Name">
                         <label for="floatingInput">Name</label>
